# comfy-agent

./: .comfy_servers.example.yaml  .env.example  .gitignore  COMFYUI-POOL.md  CURATED_WORKFLOWS.md  OPENCLAW-PROMPTS.md  OPENCLAW-TESTER.md  OPTIMIZATIONS.md  README.md  documentation.md  mkdocs.yml  openclaw-helper.md  pyproject.toml
agent_examples/: example_agent_buildable_override.py  example_agent_motion_combo.py
agentic_skill_examples/: README.md  example_agentic_generate_then_crop.py  example_agentic_single_skill.py
comfy-data/: models_catalog.csv
comfyUI_workflows/: 2 Juggernaut Reborn img2img.json
comfy_agent/: __init__.py  agentic.py  artifacts.py  attention_reuse_plugin.py  cache_utils.py  cleanup.py  config.py  curated_catalog.py  curated_workflow_runtime.py  doctor.py  examples_helpers.py  manager.py  model_manager.py  monitoring.py  node.py  optimizations.py  refs.py  workflow.py  yaml_skill.py
docs/: index.md
examples/: README.md  __init__.py
models_used/: README.md  models_catalog.csv
skill_examples/: example_generate_sd15.py
skill_examples_buildable/: README.md  example_build_then_run.py
skills/: README.md
tools/: build_all_workflow_skills.py  build_curated_workflow_skills.py  enrich_workflow_skill_metadata.py  validate_curated_workflow_skills.py
unit_tests/: README.md  test_agentic_two_step.py  test_agents_and_examples.py  test_attention_reuse_plugin.py  test_cleanup_skills.py  test_config.py  test_curated_routing_skills.py  test_curated_workflow_skills.py  test_dependency_ops.py  test_doctor.py  test_helpers.py  test_jobs_and_registry.py  test_model_manager.py  test_monitoring_skills.py  test_optimizations.py  test_predict_job_success_likelihood.py  test_skill_packaging.py  test_skills.py  test_workflow_cache.py  (+3 more)
(+2698 files in other folders)
