[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-agent"
version = "0.2.0"
description = "A lightweight Python DSL for building and running ComfyUI workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests",
    "PyYAML",
    "python-dotenv",
]
authors = [
    { name = "Stelios" },
]
keywords = ["comfyui", "workflows", "diffusion", "agent", "image-generation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["comfy_agent*"]

[project.scripts]
comfy-agent-doctor = "comfy_agent.doctor:main"
